--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio3-pcbradley</title>
+    <title>Repo1-pcbradley</title>
+   <!-- LINK AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- MI CSS -->
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body class="container">
@@ -21,15 +24,15 @@
         </nav>
     </header>
     <main class="Hero">
-                <h1>BIENVENIDOS</h1>
+                <h1 class="rotate">BIENVENIDOS</h1>
     </main>
     <div class="Section-A">
     </div>
-    <div class="Section-B">
+    <div class="Section-B" data-aos="zoom-in">
         <h2>AMASANDO DELICIAS PARA USTEDES!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus.</p>
     </div>
-    <div class="Section-C">
+    <div class="Section-C" data-aos="zoom-in">
         <h2>DISFRUTEN!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus.</p>
     </div>
@@ -43,5 +46,9 @@
             <li><a href=""><img src="https://icongr.am/fontawesome/whatsapp.svg?size=50&color=currentColor" alt=""></a></li>
         </ul>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+         AOS.init();
+    </script>
 </body>
 </html>
